--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="share">
 
               <a href="https://www.linkedin.com/in/ankit-kumar-09945b2b2" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/0fficialAnkit" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="https://github.com/" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:ankitsingh2576@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="https://twitter.com/" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
               <a href="https://t.me/" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
