--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
     <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>Flipkart Grid 6.0</h2>
+            <h2>Smart India Hackthon 2024</h2>
           </div>
           <div class="desc">
-              <h3>Participant | Open Source Program</h3>
-              <p>Aug 2024 - present</p>
+              <h3>Participant |Pre-qualifiers</h3>
+              <p>Sept 2024 </p>
           </div>
         </div>
       </div>
