--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <h2>Smart India Hackthon 2024</h2>
           </div>
           <div class="desc">
-              <h3>Participant |Pre-qualifiers</h3>
+              <h3>Second Runner Up |Pre-qualifiers</h3>
               <p>Sept 2024 </p>
           </div>
         </div>
