--- a/index.html
+++ b/index.html
@@ -319,6 +319,18 @@
         </div>
       </div>
 
+      <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>UP International Trade Show 2024</h2>
+          </div>
+          <div class="desc">
+              <h3>Exhibitor</h3>
+              <p>Sept 2024 </p>
+          </div>
+        </div>
+      </div>
+
   </div>
 
   <div class="morebtn">
